    * The web interface shows the troves contained in a group trove instead
      of trying to list all files in a group.
  o Client Changes
    * Config file options that take a path as a value now support ~ for 
      home directory substitution
    * Trove.diff() returns a standard job list instead of the previous
      only-used-here format
  o Build Changes (cvc)
    * Additional calls are emulated by the filename_wrapper for the
      r.Run calls.
  o Code Structure
    * Split build/recipe.py into several smaller files

Changes in 0.71.0:
  o Code Structure
    * conary now imports all python modules from a toplevel "conary"
      module.  This prevents conary from polluting the module namespace.
  o Client Changes
    * Clone didn't handle shadow version numbers correctly (and could create
      inconsistent version numbers)

Changes in 0.70.5:
  o Client Changes
    * Files changing to config files across distributed repositories now works.
    * The update code uses more consistent use of trove sources, and only
      makes explicit calls to the repository if asked.  This should make it
      possible to create interesting update filters.
    * Clone updated sequences it was iterating over, which is generally
      a bad idea (and caused clone to commit inconsistent troves)
  o Build Changes (cvc)
    * Locally cooked filesets now include file contents, making the
      filesets installable.
    * Fileset cooks now retrieve all of the file objects in a single
      network request per repository.
    * The new NormalizeLibrarySymlinks policy runs the ldconfig program
      in all system library directories.  This ensures that all the
      same symlinks that ldconfig would create when the shlib tag handler
      runs are packaged.  It also warns if ldconfig finds missing files.
    * New argument to r.Run(): "wrapdir" keyword argument behaves much
      like "filewrap" but takes a string argument, which limits the scope of