@@ -11,6 +11,7 @@ Changes in 0.71.1:
       home directory substitution
     * Trove.diff() returns a standard job list instead of the previous
       only-used-here format
+    * /var/log/conary tracks all update, remove, rollback, and erase events
   o Build Changes (cvc)
     * Additional calls are emulated by the filename_wrapper for the
       r.Run calls.
